<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ForwardSecrecy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="large_text">Large text</string>
    <string name="medium_text">Medium text</string>
    <string name="small_text">Small text</string>
    <string name="execute_ECDH">execute ECDH</string>

</resources>
